--- a/WebMVC/Views/Home/About.cshtml
+++ b/WebMVC/Views/Home/About.cshtml
@@ -7,3 +7,6 @@
 <p>Use this area to provide additional information.</p>
 
 @Html.ActionLink("Quay lại trang chủ","Index","Home")
+
+
+<p>this is partialview </p>
