--- a/WebMVC/Views/Home/Contact.cshtml
+++ b/WebMVC/Views/Home/Contact.cshtml
@@ -15,3 +15,5 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+@Html.Action("DemoPartialViews", "Home")
