--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
+@Html.AntiForgeryToken()
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
