--- a/WebMVC/Views/Product/Index.cshtml
+++ b/WebMVC/Views/Product/Index.cshtml
@@ -1,10 +1,28 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/_Layout.cshtml";
 
+        var date = DateTime.Now;
+        
 
+        for (int i = 0; i < 10; i++)
+        {
+
+        }
+        int a = 10;
+        switch (a) { case 1: break; }
+
+    var list = new List<string>();
+
+            if (a == 2)
+            {
+
+            }
+    }
+
+    Ngày hiện tại : @date.ToString("dd/MM/yyyy");
+@Html.ActionLink("Bấm vào đây","About","Home")
 <div class="form-group">
     <label for="email">Tên sản phẩm:</label>
     <input type="email" class="form-control" id="txtProductName">
