--- a/WebMVC/Views/Shared/_Layout.cshtml
+++ b/WebMVC/Views/Shared/_Layout.cshtml
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="~/Content/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/Content/dist/css/adminlte.min.css">
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/js.cookie.js"></script>
+    <script src="~/Scripts/Cart/Cart.js"></script>
+
 </head>
 <body class="hold-transition sidebar-mini">
     <!-- Site wrapper -->
